Fix build for stache javadoc